2010-06-13 Jens Thoms Toerring    <jt@toerring.de>

	lib/tabfolder.c: Serge Bromow found that under Gnome the
	contents of a tabfolder weren't positioned correctly,
	hopefully fixed.

2010-05-24 Jens Thoms Toerring    <jt@toerring.de>

	* lib/spinner.c: Werner Heisch found a bug in the
	float spinner that kept the user from editing the
	value.

2010-05-23 Jens Thoms Toerring    <jt@toerring.de>

	* lib/flinternals.h, browser.c, objects.c, input.c: Moved
	duplicate code in brower and input module into a function
	in objects.c.

2010-05-22 Jens Thoms Toerring    <jt@toerring.de>

	* doc: Paul Nicholson put a lot of work into correcting
	all kinds of issue with the documentation!

	* lib/input.c: in some situations in a multi-line
	input object parts of the scrollbar were drawn even
	though no scrollbars were suposed to be shown.

	* lib/xyplot.c: Active xyplot was broken.

	* lib/box.c: If label is inside of box it's now clipped
	to the inside of the box and never draws outside of it.

2010-05-21 Jens Thoms Toerring    <jt@toerring.de>

	* doc: Many spelling errors etc. removed that Paul
	Nicholson had pointed out.

	* fdesign: deprecated values from alignment label menu
	in the form for editing object attributes removed.

	* lib/forms.c: Bug with resizing scrollbars on resize of
	form that Paul Nicholson pointed out fixed.

	* fdesign/fd_attribs.c: Another bug found by Paul Nicholson:
	when in changing the type of an object with childs and then
	undoing the change immediately ("Attributes" form still open
	and clicking "Cancel") fdesign crashed. Hopefully fixed now.

2010-05-19 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: small changes (mostly to fd/ui_theforms.fd)
	to get rid of annoying flicker in the control window
	when adding a new object in the other window.

2010-05-18 Jens Thoms Toerring    <jt@toerring.de>

	lib/objects.c: Another bug found by Serge Bromow fixed:
	shortcuts with ALT key had stopped to work.
